--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
           Here are some words on the left
           </p>
         </div>
-        
+        </section>
+        <section id = "dots">
 
-        <div style="text-align:center">
+        <div class = "dotContainer">
           <span class="dot"></span> 
           <span class="dot"></span> 
           <span class="dot"></span> 
