--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 							<div class="dropdown">
 								<button class="dropbtn"><a href="background/background.html">Background</a></button>
 								<div class="dropdown-content">
-									<a href="background/theatmosphere.html">The Atmosphere</a>
-									<a href="background/airglow.html">Airglow</a>
-									<a href="background/gravitywaves.html">Gravity Waves</a>
-									<a href="#">Clouds</a>
+									<ul><a href="background/theatmosphere.html">The Atmosphere</a>
+									<li><a href="background/airglow.html">Airglow</a></li>
+									<li><a href="background/gravitywaves.html">Gravity Waves</a></li>
+									<li><a href="#">Clouds</a></li>
+									</ul>	
 								</div>		
 							</div>
 						
