--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 							<div class="dropdown">
 								<button class="dropbtn"><a href="background/background.html">Background</a></button>
 								<div class="dropdown-content">
-									<ul><a href="background/theatmosphere.html">The Atmosphere</a>
+									<ul>
+									<li><a href="background/theatmosphere.html">The Atmosphere</a></li>
 									<li><a href="background/airglow.html">Airglow</a></li>
 									<li><a href="background/gravitywaves.html">Gravity Waves</a></li>
 									<li><a href="#">Clouds</a></li>
