--- a/background/gravitywavesBig/introduction.html
+++ b/background/gravitywavesBig/introduction.html
@@ -1,10 +1,12 @@
 ---
 layout: single
-title: Airglow
-subtitle: This is some airglow stuff
+title: Gravity Wave Introduction
+subtitle: This is the gravity wave introduction
+folder: Background
+folderurl: background/background.html
 image: featureatmosphere.jpg
 imagealt: A nice picture of the atmosphere from space
-permalink: background/airglow
+permalink: background/gravitywaves/introduction
 ---
 								
 <p>This is the atmosphere AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
