--- a/background/background.html
+++ b/background/background.html
@@ -1,8 +1,6 @@
 ---
 layout: topcontents
-name: background
+name: Background
 sidebar: Background
 permalink: background/background
 ---							
-
-<p> some content</p>
