--- a/methods/binning.html
+++ b/methods/binning.html
@@ -6,7 +6,7 @@ folder: Methods
 folderurl: methods/methods.html
 image: featureatmosphere.jpg
 imagealt: A nice picture of the atmosphere from space
-permalink: background/methods/binning
+permalink: methods/binning
 ---
 								
 <p>This is the atmosphere AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
