--- a/inprogress/airglowmask.html
+++ b/inprogress/airglowmask.html
@@ -6,7 +6,7 @@ folder: In Progress
 folderurl: inprogress/inprogress.html
 image: featureatmosphere.jpg
 imagealt: A nice picture of the atmosphere from space
-permalink: background/inprogress/airglowmask
+permalink: inprogress/airglowmask
 ---
 								
 <p>This is the atmosphere AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
