--- a/inprogress/airsmask.html
+++ b/inprogress/airsmask.html
@@ -6,7 +6,7 @@ folder: In Progress
 folderurl: inprogress/inprogress.html
 image: featureatmosphere.jpg
 imagealt: A nice picture of the atmosphere from space
-permalink: background/inprogress/airsmask
+permalink: inprogress/airsmask
 ---
 								
 <p>This is the atmosphere AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
