--- a/inprogress/sios.html
+++ b/inprogress/sios.html
@@ -6,7 +6,7 @@ folder: In Progress
 folderurl: inprogress/inprogress.html
 image: featureatmosphere.jpg
 imagealt: A nice picture of the atmosphere from space
-permalink: background/inprogress/sios
+permalink: inprogress/sios
 ---
 								
 <p>This is the atmosphere AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
