--- a/instruments/aquaairs.html
+++ b/instruments/aquaairs.html
@@ -6,7 +6,7 @@ folder: Instruments
 folderurl: instruments/instruments.html
 image: featureatmosphere.jpg
 imagealt: A nice picture of the atmosphere from space
-permalink: background/instruments/aquaairs
+permalink: instruments/aquaairs
 ---
 								
 <p>This is the atmosphere AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
