--- a/methods/fourier.html
+++ b/methods/fourier.html
@@ -6,7 +6,7 @@ folder: Methods
 folderurl: methods/methods.html
 image: featureatmosphere.jpg
 imagealt: A nice picture of the atmosphere from space
-permalink: background/methods/fourier
+permalink: methods/fourier
 ---
 								
 <p>This is the atmosphere AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
