--- a/methods/imageanal.html
+++ b/methods/imageanal.html
@@ -6,7 +6,7 @@ folder: Methods
 folderurl: methods/methods.html
 image: featureatmosphere.jpg
 imagealt: A nice picture of the atmosphere from space
-permalink: background/methods/imageanal
+permalink: methods/imageanal
 ---
 								
 <p>This is the atmosphere AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
