--- a/methods/strans.html
+++ b/methods/strans.html
@@ -6,7 +6,7 @@ folder: Methods
 folderurl: methods/methods.html
 image: featureatmosphere.jpg
 imagealt: A nice picture of the atmosphere from space
-permalink: background/methods/strans
+permalink: methods/strans
 ---
 								
 <p>This is the atmosphere AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
