--- a/testBack.html
+++ b/testBack.html
@@ -1,6 +1,6 @@
 ---
 layout: test
-name: Background
+name: test
 sidebar: Background
-permalink: background/background
+permalink: test/test
 ---							
