--- a/testBack.html
+++ b/testBack.html
@@ -3,4 +3,9 @@ layout: test
 name: test
 sidebar: Background
 permalink: test/test
----							
+title: Testing
+subtitle: These are the soucres of gravity waves
+image: featureatmosphere.jpg
+imagealt: A nice picture of the atmosphere from space
+---	
+<span>This is the test text</span>						
