--- a/background/theatmosphereBig/dynamics.html
+++ b/background/theatmosphereBig/dynamics.html
@@ -9,6 +9,10 @@ imagealt: A nice picture of the atmosphere from space
 permalink: background/theatmosphereBig/dynamics
 ---
 								
-<p>This is the atmosphere AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-<p>Nunc quis dui scelerisque, scelerisque urna ut, dapibus orci. Sed vitae condimentum lectus, ut imperdiet quam. Maecenas in justo ut nulla aliquam sodales vel at ligula. Sed blandit diam odio, sed fringilla lectus molestie sit amet. Praesent eu tortor viverra lorem mattis pulvinar feugiat in turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce ullamcorper tellus sit amet mattis dignissim. Phasellus ut metus ligula. Curabitur nec leo turpis. Ut gravida purus quis erat pretium, sed pellentesque massa elementum. Fusce vestibulum porta augue, at mattis justo. Integer sed sapien fringilla, dapibus risus id, faucibus ante. Pellentesque mattis nunc sit amet tortor pellentesque, non placerat neque viverra. </p>
+<p>
+    Atmospheric dynamics just means how the atmosphere moves. This is mainly down to some pretty simple thermodynamics and some of Newton's laws.
+    For example, the winds only occur because the Sun heats the Earth irregularly (because the Earth spins).
+    As the warmth from the Sun heats the atmosphere, the air in that area rises, leaving an area of low pressure.
+    The low pressure area tries to even itself out too, so more air rushes into the gap left.
+</p>
 								
