--- a/background/theatmosphereBig/dynamics.html
+++ b/background/theatmosphereBig/dynamics.html
@@ -15,4 +15,12 @@ permalink: background/theatmosphereBig/dynamics
     As the warmth from the Sun heats the atmosphere, the air in that area rises, leaving an area of low pressure.
     The low pressure area tries to even itself out too, so more air rushes into the gap left.
 </p>
-								
+
+<p>
+    There are convective cells (Hadley etc) around the world.
+    Some of this is because of the Coriolis effect.
+</p>
+
+<p>
+    Maybe could talk about things like ENSO and SSWs (NAO?)
+</p>
