--- a/background/gravitywavesBig/introduction.html
+++ b/background/gravitywavesBig/introduction.html
@@ -9,6 +9,9 @@ imagealt: A nice picture of the atmosphere from space
 permalink: background/gravitywavesBig/introduction
 ---
 								
-<p>This is the atmosphere AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-<p>Nunc quis dui scelerisque, scelerisque urna ut, dapibus orci. Sed vitae condimentum lectus, ut imperdiet quam. Maecenas in justo ut nulla aliquam sodales vel at ligula. Sed blandit diam odio, sed fringilla lectus molestie sit amet. Praesent eu tortor viverra lorem mattis pulvinar feugiat in turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce ullamcorper tellus sit amet mattis dignissim. Phasellus ut metus ligula. Curabitur nec leo turpis. Ut gravida purus quis erat pretium, sed pellentesque massa elementum. Fusce vestibulum porta augue, at mattis justo. Integer sed sapien fringilla, dapibus risus id, faucibus ante. Pellentesque mattis nunc sit amet tortor pellentesque, non placerat neque viverra. </p>
-								
+<p>
+    Atmospheric gravity waves are ways that the atmosphere tries to make itself even.
+    They are the main way the atmosphere moves energy up and down
+    Where they break (like in the water), they release the energy as turbulence.
+    This slows down, or speeds up, the wind where they break (like trying to go into a breaking wave, or riding a breaking wave).
+</p>
