--- a/background/theatmosphereBig/layers.html
+++ b/background/theatmosphereBig/layers.html
@@ -9,6 +9,23 @@ imagealt: A nice picture of the atmosphere from space
 permalink: background/theatmosphereBig/layers
 ---
 								
-<p>This is the atmosphere AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-<p>Nunc quis dui scelerisque, scelerisque urna ut, dapibus orci. Sed vitae condimentum lectus, ut imperdiet quam. Maecenas in justo ut nulla aliquam sodales vel at ligula. Sed blandit diam odio, sed fringilla lectus molestie sit amet. Praesent eu tortor viverra lorem mattis pulvinar feugiat in turpis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce ullamcorper tellus sit amet mattis dignissim. Phasellus ut metus ligula. Curabitur nec leo turpis. Ut gravida purus quis erat pretium, sed pellentesque massa elementum. Fusce vestibulum porta augue, at mattis justo. Integer sed sapien fringilla, dapibus risus id, faucibus ante. Pellentesque mattis nunc sit amet tortor pellentesque, non placerat neque viverra. </p>
-								
+<p>
+    The layers of the atmosphere are defined by change in temperature.
+    This comes about because of different chemical makeups etc
+</p>
+
+<p>
+    Troposphere: Full of weather
+</p>
+<p>
+    Stratosphere: Full of planes
+</p>
+<p>
+    Mesosphere: Full of nothing
+</p>
+<p>
+    Ionosphere: Full of electricity
+</p>
+<p>
+    Magnetosphere: Full of solar stuff
+</p>
