--- a/background/theatmosphereBig/dynamics.html
+++ b/background/theatmosphereBig/dynamics.html
@@ -17,8 +17,8 @@ permalink: background/theatmosphereBig/dynamics
 
     There are convective cells (Hadley etc) around the world.
     Some of this is because of the Coriolis effect.
-</p>
 
-<p>
     Maybe could talk about things like ENSO and SSWs (NAO?)
+
+    Talk about planetary waves
 </p>
