--- a/background/theatmosphereBig/dynamics.html
+++ b/background/theatmosphereBig/dynamics.html
@@ -4,7 +4,7 @@ title: Atmospheric Dynamics
 subtitle: This is how the atmosphere moves
 folder: Background
 folderurl: background/background.html
-image: windy.png
+image: pic02.jpg
 imagealt: A nice picture of the atmosphere from space
 permalink: background/theatmosphereBig/dynamics
 ---
